--- a/aspnet-get-started/Views/Home/Index.cshtml
+++ b/aspnet-get-started/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <h1>This is developed by nagaraju Y, DJK sekhar,K srinu and batch SNS </h1>
+    <h1>This is developed by nagaraju Y, DJK sekhar,K srinu and batch SNS  in dev</h1>
     <p class="lead">Welcome To Azure Advance Administration Training </p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
