--- a/aspnet-get-started/Views/Home/Index.cshtml
+++ b/aspnet-get-started/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <h1>This is developed by on 15th Jul'2025 by nagaraju and pushing to dev slot now  </h1>
+    <h1>This the the critical update updated on code for login and payment gateway .. need to be validated devlopment has been done </h1>
     <p class="lead">Welcome To Azure Advance Administration Training </p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
